# karakuri

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: cyl_with_hole.py  gear_with_bore.py  hello_cube.py
src/karakuri/: __init__.py  cyl_with_hole.py  features.py  hello_cube.py  spur_gear.py
tests/: test_features.py  test_spur_gear.py
