[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karakuri"
version = "0.1.0"
description = "Python library for generating gear 3D models."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "zamajinn" }
    ]
dependencies = [
    "build123d>=0.10.0",
    ]
[tool.hatch.build.targets.wheel]
packages = ["src/karakuri"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff >=0.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:build123d.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I"]